# FundRadar

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  vercel.json
backend/: alembic.ini  main.py  portfolio_advisor.py  pyproject.toml  test_e2e.py  test_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 9863acc83e39_add_portfolio_signal_feedback_tables.py  a4f7c2e81b93_add_trade_review_tables.py  bce95bc028dc_add_retail_sentiment_and_signal_field.py  cb268f53e627_initial.py  d7e1f9a3b4c5_add_quant_snapshot_and_signal_quant.py
backend/app/analyzer/: blogger_scorer.py  llm_client.py  news_analyzer.py  prediction_parser.py  signal_generator.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  bloggers.py  orders.py  portfolio.py  reviews.py  signals.py  telegram.py
backend/app/core/: config.py  database.py  plans.py  security.py
backend/app/crawler/: astock.py  base.py  fund_nav.py  news.py  orchestrator.py  sentiment.py  weibo.py  xueqiu.py
backend/app/models/: models.py
backend/app/scheduler/: jobs.py  scheduler.py
backend/app/schemas/: schemas.py
backend/app/services/: bot_handler.py  daily_export.py  nav_updater.py  plan_guard.py  portfolio_analyzer.py  review_chat.py  screenshot_ocr.py  signal_feedback.py  signal_pusher.py  telegram_bot.py
backend/tests/: README.md  conftest.py  test_analyzers.py  test_crawlers.py  test_e2e.py  test_multi_source.py  test_signal_pusher.py
docs/: database-schema.md  db-export-2026-06-17.md  full-pipeline-report-2026-06-17.md  multi-source-sentiment.md  (+2 more)
(+34 files in other folders)
