[project]
name = "fund-radar"
version = "0.1.0"
description = "FundRadar - AI-driven fund investment signal platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "apscheduler>=3.10",
    "redis>=5.0",
    "akshare>=1.14",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
